# BD

./: .gitignore  pyproject.toml
.github/workflows/: sync.yml  test.yml
authentication/: admin.py  models.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_birthday.py  0003_user_date_creation.py  0004_alter_user_date_creation.py
authentication/templates/authentication/: account.html  index.html  login.html  signup.html
bd/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
bd/template/bd/: site_under_construction.html
mes_bds/: admin.py  apps.py  models.py  views.py
mes_bds/migrations/: 0001_initial.py  0002_rename_title_serie_name.py  0003_remove_library_unique_user_book_and_more.py  0004_remove_book_isbn_10_remove_book_isbn_13_book_isbn.py  0005_alter_book_title_book_unique_serie_number.py
mes_bds/templates/mes_bds/: account.html  add_book.html  index.html  my_library.html  (+1 more)
my_library/: admin.py  api.py  forms.py  img.py  models.py  views.py
my_library/migrations/: 0001_initial.py  0002_auto_20250911_1221.py  0003_remove_book_author_book_author.py  0004_rename_author_book_authors.py  0005_remove_book_unique_serie_number_alter_book_isbn.py  0006_remove_book_cover_id_book_cover.py  0007_book_first_publish_year.py  0008_alter_book_isbn_alter_book_first_publish_year.py  0009_alter_book_first_publish_year.py  0010_alter_book_first_publish_year.py
site/: apps.py
static/: style.css
staticfiles/: style.css
staticfiles/css/: site_under_construction.css
templates/: base.html  nav.html  site_under_construction.html
(+11 files in other folders)
